Focus onto shift member report

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -56,19 +56,18 @@
               data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
               <div class="dropdown-item-wrapper"><span
                   class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"></span>Patrol Report
-                <span class="me-2 uil" data-feather="book"></span>
               </div>
             </a>
             <ul class="dropdown-menu">
               <li class="dropdown"><a class="dropdown-item" href="/shift-member/view">
                   <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil"></span>Shift Member
+                    <span class="me-2 uil" data-feather="book"></span>Shift Member
                   </div>
                 </a>
               </li>
               <li class="dropdown"><a class="dropdown-item" href="/unit-patrol/view">
                   <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil"></span>Unit Patrol
+                    <span class="me-2 uil" data-feather="map-pin"></span>Unit Patrol
                   </div>
                 </a>
               </li>
