added map leaflet function

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
 </nav>
 
 <!-- Navbar top -->
-<nav class="navbar navbar-top fixed-top navbar-expand-lg" id="navbarTop" style="display: none">
+<nav class="navbar navbar-top fixed-top navbar-expand-lg d-print-none" id="navbarTop">
   <!-- Left-side -->
   <div class="navbar-logo d-print-inline-flex">
     <button class="btn navbar-toggler navbar-toggler-humburger-icon hover-bg-transparent" type="button"
@@ -65,9 +65,9 @@
                   </div>
                 </a>
               </li>
-              <li class="dropdown"><a class="dropdown-item" href="/unit-patrol/view">
+              <li class="dropdown"><a class="dropdown-item" href="/patrol-unit/view">
                   <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil" data-feather="map-pin"></span>Unit Patrol
+                    <span class="me-2 uil" data-feather="map-pin"></span>Patrol Unit
                   </div>
                 </a>
               </li>
