--- a/views/patrol-unit-details.ejs
+++ b/views/patrol-unit-details.ejs
@@ -3,15 +3,17 @@
 <div class="content px-0 pt-9">
   <div class="row g-0">
     <div class="col-12 col-xxl-10 px-0 bg-soft">
-      <div class="px-4 px-lg-6 pt-6 pb-9">
+      <div class="px-3 px-lg-3 pt-6 pb-9">
         <!-- top header section -->
         <div class="mb-5">
           <nav class="mb-4" aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
               <li class="breadcrumb-item active">Reports</li>
               <li class="breadcrumb-item active">Patrol Report</li>
-              <li class="breadcrumb-item active">Shift Member</li>
-              <li class="breadcrumb-item active"><%= patrolReport.location %></li>
+              <li class="breadcrumb-item active">Patrol Unit</li>
+              <li class="breadcrumb-item active">
+                <%= patrolReport.location %>
+              </li>
             </ol>
           </nav>
           <div class="d-flex justify-content-between row g-1">
@@ -39,24 +41,21 @@
             <div class="mb-4 mb-xl-7">
               <div class="row gx-0 gx-sm-7">
                 <div class="col-12 col-xxl-4">
-                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-keyboard me-2"></span><strong><%= patrolReport.type %></strong></div>
-                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-flag me-2"></span>Shift : <strong class="text-1000"><%= patrolReport.shift %></strong></div>
-                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-hourglass-start me-2"></span>Start Shift : <strong class="text-1000"><%= patrolReport.startShift %></strong></div>
-                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-hourglass-end me-2"></span>End Shift : <strong class="text-1000"><%= patrolReport.endShift %></strong></div>
+                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-keyboard me-2"></span><strong>
+                      <%= patrolReport.type %>
+                    </strong></div>
                 </div>
+
                 <div class="col-12 col-xxl-8">
-                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-clipboard-user me-2"></span>Shift Members : </div>
-                  <div id="giveShiftMemberDisplay" class="d-flex row g-1">
-                    <% if (patrolReport && patrolReport.shiftMember && patrolReport.shiftMember.length > 0) { %>
-                    <% patrolReport.shiftMember.forEach(member => { %>
-                    <div class="btn btn-outline-primary col-auto">
-                      <%= member.fullName %>
-                    </div>
-                    <% }); %>
-                    <% } else { %>
-                    <div>No shift members for this handover</div>
-                    <% } %>
+                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-hourglass-start me-2"></span>Start Shift :
+                    <strong class="text-1000">
+                      <%= patrolReport.startShift %>
+                    </strong>
                   </div>
+                  <div class="text-600 fw-semi-bold"><span class="fa-solid fa-hourglass-end me-2"></span>End Shift : <strong class="text-1000">
+                      <%= patrolReport.endShift %>
+                    </strong></div>
+
                 </div>
               </div>
             </div>
@@ -66,29 +65,23 @@
         <hr>
 
         <div class="col-12 mb-3">
-          <div class="container mt-2 mb-3 row" style="margin-left: auto; margin-right: auto;">
-            <% if (patrolReport.shiftMember && patrolReport.shiftMember.length > 0) { %>
-            <% patrolReport.shiftMember.forEach(function(member) { %>
-            <div class="card mb-3 col-12 col-xxl-3 scrollbar-overlay" style="height: 30vh;">
-              <div class="card-body">
-                <h5 class="card-title"><%= member.fullName %></h5>
-                <div class="progress mb-3" style="height:15px">
-                  <div class="progress-bar rounded-3" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
-                </div>
-                <% if (member.checkPoint && member.checkPoint.length > 0) { %>
-                <% member.checkPoint.forEach(function(checkpoint) { %>
-                <div class="card-text">
-                  <p class="mb-0"><strong>Checkpoint Name:</strong> <%= checkpoint.checkpointName %></p>
-                </div>
-                <% }); %>
-                <% } else { %>
-                <p>No checkpoints available for this member.</p>
-                <% } %>
+          <div class="container mt-2 mb-3 row px-0" style="margin-left: auto; margin-right: auto;">
+            <div class="col-12">
+              <h4 class="mb-3">Checkpoint Progress Report</h4>
+              <div id="myMapContainer" style="height: 40vh;" class="m-3 rounded-3 mx-0"></div>
+              <div class="progress mb-3" style="height:12.5px">
+                <div class="progress-bar rounded-3" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
               </div>
             </div>
-            <% }); %>
-            <% } else { %>
-            <p>No shift members available.</p>
+
+            <% for (const checkpoint of patrolReport.patrolUnit) { %>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Checkpoint Name: <%= checkpoint.checkpointName %></h5>
+                <p class="card-text">Time: <%= checkpoint.time %></p>
+                <p class="card-text">Log Report: <%= checkpoint.logReport %></p>
+              </div>
+            </div>
             <% } %>
           </div>
         </div>
@@ -101,7 +94,9 @@
               <span class="fa-solid fa-pen"></span>
             </button>
           </div>
-          <p class="text-800"><%= patrolReport.notes %></p>
+          <p class="text-800">
+            <%= patrolReport.notes %>
+          </p>
         </div>
       </div>
     </div>
@@ -112,18 +107,20 @@
           <div class="px-4 px-lg-6 py-4">
             <h4 class="mb-0">Files</h4>
           </div>
-          <% if (Array.isArray(files) && files.length > 0) { %>
+          <% if (Array.isArray(files) && files.length> 0) { %>
           <!-- table item -->
-          <% files.forEach(function (item) { %> <% if(item.fileType === ".jpg"
-          || item.fileType === ".jepg" || item.fileType === ".gif" ||
-          item.fileType === ".bmp" || item.fileType === ".png" ) {%>
+          <% files.forEach(function (item) { %>
+          <% if(item.fileType===".jpg" || item.fileType===".jepg" || item.fileType===".gif" ||
+                                        item.fileType===".bmp" || item.fileType===".png" ) {%>
 
           <div class="border-top border-300 px-4 px-lg-6 py-4">
             <div class="me-n3">
               <div class="d-flex flex-between-center">
                 <div class="d-flex mb-1">
                   <span class="fa-solid fa-image me-2 text-700 fs--1"></span>
-                  <p class="text-1000 mb-0 lh-1"><%= item.filename %></p>
+                  <p class="text-1000 mb-0 lh-1">
+                    <%= item.filename %>
+                  </p>
                 </div>
                 <div class="font-sans-serif btn-reveal-trigger">
                   <button class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal" type="button" data-bs-toggle="dropdown" data-boundary="window" aria-haspopup="true" aria-expanded="false" data-bs-reference="parent">
@@ -135,7 +132,11 @@
                 </div>
               </div>
               <div class="d-flex fs--1 text-700 mb-2 flex-wrap">
-                <a href="#!"><%= item.by %></a><span class="text-400 mx-1">| </span><span class="text-nowrap"><%= item.date %></span>
+                <a href="#!">
+                  <%= item.by %>
+                </a><span class="text-400 mx-1">|</span><span class="text-nowrap">
+                  <%= item.date %>
+                </span>
               </div>
               <img class="rounded-2" id="imageDetails" src="/uploads/<%= item.filename %>" alt="" style="max-width: 200px" />
             </div>
@@ -148,11 +149,16 @@
                 <div>
                   <div class="d-flex align-items-center mb-1 flex-wrap">
                     <p class="text-1000 mb-0 lh-1">
-                      <span class="fa-solid fa-file-lines me-2 fs--1 text-700"></span><%= item.filename %>
+                      <span class="fa-solid fa-file-lines me-2 fs--1 text-700"></span>
+                      <%= item.filename %>
                     </p>
                   </div>
                   <div class="d-flex fs--1 text-700 mb-0 flex-wrap">
-                    <a href="#!"><%= item.by %> </a><span class="text-400 mx-1">| </span><span class="text-nowrap"><%= item.date %></span>
+                    <a href="#!">
+                      <%= item.by %>
+                    </a><span class="text-400 mx-1">| </span><span class="text-nowrap">
+                      <%= item.date %>
+                    </span>
                   </div>
                 </div>
                 <div class="font-sans-serif btn-reveal-trigger">
@@ -166,7 +172,9 @@
               </div>
             </div>
           </div>
-          <% } %> <% }) %> <% } else { %>
+          <% } %>
+          <% }) %>
+          <% } else { %>
           <div class="border-top border-bottom border-300 px-4 px-lg-6 py-4">
             <div class="me-n3">
               <div class="d-flex flex-between-center">
