--- a/views/patrol-unit-details.ejs
+++ b/views/patrol-unit-details.ejs
@@ -68,22 +68,109 @@
           <div class="container mt-2 mb-3 row px-0" style="margin-left: auto; margin-right: auto;">
             <div class="col-12">
               <h4 class="mb-3">Checkpoint Progress Report</h4>
-              <div id="myMapContainer" style="height: 40vh;" class="m-3 rounded-3 mx-0"></div>
+              <div id="myMapContainer" style="height: 50vh;" class="m-3 rounded-3 mx-0"></div>
+
+              <script>
+                $(document).ready(function() {
+                  $.ajax({
+                    url: '/map-coordinates/<%= patrolReport.reportId %>',
+                    method: 'GET',
+                    dataType: 'json',
+                    success: function(data) {
+                      initializeMap(data);
+                    },
+                    error: function(error) {
+                      console.error('Error fetching coordinates:', error);
+                    }
+                  });
+
+                  function initializeMap(markerCoordinates) {
+                    mapboxgl.accessToken = 'pk.eyJ1Ijoic2hycnNoYXpuaSIsImEiOiJjbHEzN3Y0bnIwODZ2MmpwbDF5Y2E0am5sIn0.fFJ-Q9JOI9fsOrkagF6kvA';
+                    console.log(markerCoordinates);
+
+                    const map = new mapboxgl.Map({
+                      container: 'myMapContainer',
+                      center: [110.3459, 1.5762],
+                      zoom: 16.5,
+                      pitch: 62,
+                      bearing: -20
+                    });
+
+                    // Loop through the markerCoordinates array and add markers to the map
+                    markerCoordinates.forEach(coordinates => {
+                      const marker = new mapboxgl.Marker()
+                        .setLngLat(coordinates)
+                        .addTo(map);
+                    });
+                  }
+                });
+              </script>
+
               <div class="progress mb-3" style="height:12.5px">
-                <div class="progress-bar rounded-3" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+                <div class="progress-bar rounded-3" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:<%= percentage %>%;"><%= percentage %>%</div>
               </div>
             </div>
 
-            <% for (const checkpoint of patrolReport.patrolUnit) { %>
-            <div class="card mb-3">
-              <div class="card-body">
-                <h5 class="card-title">Checkpoint Name: <%= checkpoint.checkpointName %></h5>
-                <p class="card-text">Time: <%= checkpoint.time %></p>
-                <p class="card-text">Log Report: <%= checkpoint.logReport %></p>
+            <div class="container">
+              <% var textColor = ""; var icon = ""; %>
+              <% for (const checkpoint of patrolReport.patrolUnit) { %>
+              <div class="card mb-3">
+                <div class="card-body">
+
+                  <% if (checkpoint.time === ''){
+                    textColor = "text-danger";
+                    icon = "fa-solid fa-xmark";
+                  }else {
+                    textColor = "text-success";
+                    icon = "fa-solid fa-check"
+                  } 
+                  %>
+                  <div class="justify-content-between d-flex">
+                    <h5 class="card-title"><%= checkpoint.checkpointName %></h5>
+                    <div><span class="<%= icon %> <%= textColor %> fs-1"></span></div>
+                  </div>
+
+                  <p class="card-text">Time: <%= checkpoint.time %></p>
+                  <p class="card-text">Log Report: <%= checkpoint.logReport %></p>
+                </div>
               </div>
+              <% } %>
             </div>
-            <% } %>
+
           </div>
+        </div>
+
+        <div class="container mt-2">
+          <h2 class="mb-0">Checkpoint Entry Form</h2>
+
+          <form action="/patrol-unit/details/<%= patrolReport.reportId %>" method="post" class="row g-1">
+            <div class="form-group col-12 col-xxl-12">
+              <label for="checkpointName" class="form-label">Checkpoint Name:</label>
+              <input type="text" class="form-control" id="checkpointName" name="checkpointName" required>
+            </div>
+
+            <div class="form-group col-12 col-xxl-6">
+              <label for="latitude" class="form-label">Latitude:</label>
+              <input type="text" step="any" class="form-control" id="latitude" name="latitude" required>
+            </div>
+
+            <div class="form-group col-12 col-xxl-6">
+              <label for="longitude" class="form-label">Longitude:</label>
+              <input type="text" step="any" class="form-control" id="longitude" name="longitude" required>
+            </div>
+
+            <div class="form-group col-12">
+              <label for="time" class="form-label">Time:</label>
+              <input type="text" class="form-control" id="time" name="time" required>
+            </div>
+
+            <div class="form-group mb-3">
+              <label for="logReport" class="form-label">Log Report:</label>
+              <textarea class="form-control" id="logReport" name="logReport" rows="4" required></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
 
         <hr />
@@ -192,6 +279,7 @@
         </div>
       </div>
     </div>
+    
   </div>
 </div>
 
